components/Classes/Classes.module.scss
@import "./styles/variables";
@import "./styles/mediaQuery";

.classes__content {
  height: 100%;
}

.classes {
  width: 100%;
  height: 100%;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows: 1fr 1fr;
  gap: 20px;

  &__singleClass {
    padding: 0 20px;
    height: 400px;
    line-height: 1.3rem;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    background-color: $content-background;
    transition: background-color 200ms ease-in-out;

    &:hover {
      background-color: #fbfbfb;
    }

    & > h3 {
      padding: 0 20px 10px 20px;
      border-bottom: 2px solid $font-secondary;
    }

    & > h3 {
      padding-top: 20px;
    }

    & > p {
      margin: 0;
      text-align: left;
    }
  }
}

@include for-phone-only {
  .classes {
    display: block;

    &__singleClass {
      width: 90%;
      margin: 10px auto;
    }
    &__selection {
      &Btn {
        font-size: 1.3rem;
        line-height: 1rem;
      }
    }
  }
}

@include for-tablet-portrait {
  .classes {
    height: auto;
    grid-template-rows: repeat(4, 1fr);
    grid-template-columns: 1fr 1fr;

    &__singleClass {
      height: auto;
    }
  }
}

@include for-tablet-landscape {
  .classes {
    height: auto;
    &__singleClass {
      height: auto;
    }
  }
}

@include for-desktop {
  .classes {
    height: auto;
    &__singleClass {
      height: auto;
    }
  }
}

